abstract class Strings {
  //paths
  static const secondScreenPath = '/main_screen/display_screen';
  static const loginIconPath = 'assets/icons/login_icon.svg';
  static const loginPath = '/login';
  static const mainScreenPath = '/main_screen';

  //texts
  static const locationText = 'Location';
  static const travelHistoryText = 'Share Your Travel History';
  static const shareLocationsText = 'Tell us about the amazing '
      'places you\'ve explored! We\'d '
      'love to hear about your past travel experiences. Please '
      'enter the names of the cities, countries, or regions you\'ve '
      'visited.';
  static const lastTripsText = 'Last trips locations';
  static const continueText = 'Continue';
  static const loginText = 'Login';
  static const signInText = 'Sign in';
  static const signUpText = 'Sign up';
  static const emailText = 'Email';
  static const nameText = 'Name';
  static const passwordText = 'Password';
  static const accountNotFoundText = 'Account Not Found';
  static const noAccountOrWrongCredentialsText =
      'You do not have an account or the credentials are invalid. Would you like to register or try again?';
  static const tryAgainText = 'Try again';
  static const pleaseSignInText = 'Please sign in to continue';
  static const noAccountText = 'Don\'t have an account?';
  static const personsText = 'Persons';
  static const inputText = 'Input';
  static const isLoggedInText = 'isLoggedIn';
  static const passwordNotStrongText = 'Password not strong enough';
  static const emailShouldLookText = 'Email should look like: user@xxx.com';
  static const availablePersonsText = 'Available Persons';
  static const pleaseTapPersonText = 'Please tap on one person to fill in last trips location';
}